Implement remove contact button

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -38,6 +38,7 @@
         Name: <%= contact_fields.text_field :name %>
         Email: <%= contact_fields.text_field :email %>
         Phone: <%= contact_fields.text_field :phone %>
+        <input type="button" value="Remove" class="remove-btn" />
       </div>
     <% end %>
   </div>
